blogspot/blogspot.css
/*Variables*/
:root {
  --primary: #0065ff;
  --secondary: #609fff;
  --background: #fff;
  --foreground: #000;
}

.darked:root {
  --primary: #00e4ff;
  --secondary: #00abbf;
  --background: #000;
  --foreground: #fff;
}

body {
	display: block;
    font: normal normal 16px Open Sans;
	padding: 0 10px;
    max-width: 900px;
	margin: auto;
	color: var(--foreground);
	background-color: var(--background);
}

.header {
	width: 100%;
	max-width: 680px;
	position: fixed;
    padding: 5px 5px 0 0;
	top: 0;
	z-index: 1;
	background-color: var(--background);
	transition: opacity 0.5s;
	opacity: 0;
    white-space: break-spaces;
}

.header .hashtags a {
	padding: 0 3px;
    display: inline-block;
	white-space: nowrap;
}

@media only screen and (min-width: 320px) and (max-width: 1024px) {
}

a:hover {
  color: var(--foreground);
}

.tr-caption {
    font-size: 80%;
	max-width: 680px;
}

.Post {
	padding: 2px;
}

.Post .home-thumb {
	width: 150px;
	height: 150px;
}

.latest-post {
	padding: 12px;
	width: 150px;
	display: inline-block;
    margin: 6px auto;
}

.latest-post h4 {
    margin: 0;
}

.latest-post a {
    color: var(--primary);
}

@media only screen and (max-width: 1040px) {
	body {
		max-width: auto !important;
		font-size: 14px;
	}
	
	body {
		scrollbar-width: 0 !important;
	} //Firefox

	body::-webkit-scrollbar {
		width: 0 !important;
	} // Safari and Chrome

	.tr-caption {
		font-size: 11px;
	}

	.Post span {
	display: block;
	}
	
	.header .hashtags a {
		/* padding: 3px; */
		font-size: 0.9em;
	}
}

@media only screen and (max-width: 480px) {
	
	.header {
		width: initial;
	}
}

#blog-archive-list {
	padding-bottom: 20px;
}

#contents {
	max-width: 680px;
	margin: auto;
	right: 0;
	left: 0;
}

#tags a {
	cursor: pointer;
	white-space: nowrap;
}

#BackBtn {
	position: fixed;
	display: block;
	visibility: visible;
	bottom: 20px;
	left: 20px;
	z-index: 8;
	outline: none;
	color: var(--foreground);
	cursor: pointer;
	padding: 8px 6px 6px 6px;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	border: 1px solid var(--foreground);
	background-color: var(--background);
	box-shadow: 3px 3px var(--foreground);
	border-radius: 8px;
}

#LeftBtn {
	position: fixed;
	display: block;
	visibility: visible;
	bottom: 20px;
	left: 20px;
	z-index: 8;
	outline: none;
	color: var(--foreground);
	cursor: pointer;
	padding: 8px 6px 6px 6px;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	border: 1px solid var(--foreground);
	background-color: var(--background);
	box-shadow: 3px 3px var(--foreground);
	border-radius: 8px;
}

#RightBtn {
	position: fixed;
	display: block;
	visibility: visible;
	bottom: 20px;
	left: 80px;
	z-index: 8;
	outline: none;
	color: var(--foreground);
	cursor: pointer;
	padding: 8px 6px 6px 6px;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	border: 1px solid var(--foreground);
	background-color: var(--background);
	box-shadow: 3px 3px var(--foreground);
	border-radius: 8px;
}

#DarkModeBtn {
	position: fixed;
	display: block;
	visibility: visible;
	opacity: 1;
	bottom: 20px;
	right: 20px;
	z-index: 7;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	background-color: var(--background);
	color: var(--foreground);
	cursor: pointer;
	padding: 8px 6px 6px 6px;
	border-radius: 7px;
	transition: opacity 0.3s;
	border: 1px solid var(--foreground);
	background-color: var(--background);
	box-shadow: 3px 3px var(--foreground);
	border-radius: 8px;
}

#DarkModeBtn:active,
#BackBtn:active,
#LeftBtn:active,
#RightBtn:active {
	box-shadow: 1px 1px;
	transform: translate(2px, 2px);
}

a#SidebarBtn, a#SearchBtn {
	display: none;
}

.TheStatement {
	display: none;
}

/*Fixes from Blogger*/
h2 {
	margin: 0;
}

table.tr-caption-container {
    padding: 4px;
    margin-bottom: .5em;
}

.published {
	text-transform: uppercase;
}

.material-icons {
	font-size: 36px;
}

@media only screen and (max-width: 780px) {
  #BackBtn,
  #LeftBtn {
    left: 15px;
  }
  #DarkModeBtn {
    right: 15px;
  }
  #DarkModeBtn,
  #BackBtn,
  #LeftBtn,
  #RightBtn {
    bottom: 15px;
  }
  #RightBtn {
    left: 75px;
  }
}
/*Custom viewer*/
#viewer {
	z-index: 9;
	position: fixed;
	background-color: var(--background);
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	right: 0;
	opacity: 0;
	visibility: hidden;
	transition: opacity 0.5s, visibility 0.5s;
}

#viewer-prev {
	background-color: transparent;
	position: absolute;
	left: 0;
	top: 0;
	width: 25%;
	height: 100%;
	z-index: 11;
}

#viewer-next {
	background-color: transparent;
	position: absolute;
	right: 0;
	top: 0;
	width: 25%;
	height: 100%;
	z-index: 11;
}

#viewer-next:active {
	opacity: 0.4;
	background-image: linear-gradient(to left, white, transparent);
}

#viewer-prev:active {
	opacity: 0.4;
	background-image: linear-gradient(to right, white, transparent);
}

#viewer img {
	margin: auto;
	left: 0;
	right: 0;
	position: fixed;
}

